# familyline-testbed

./: .clang-format  .gitattributes  .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING  CONTRIBUTING.md  Doxyfile  README.md  appveyor.yml  assets.taif  assets.yml  cabana.md2  casinha.mtl  clang-format.txt  settings.yaml  terrain_test.flte  terrain_test.trtb  test.mtl  test.taif  test2.mtl  theme.yml
asset-editor/: build.xml
cmake/: FindYaml.cmake  functions.cmake  options.cmake  prelude.cmake
common/: ClientMessageQueue.cpp  ClientMessageQueue.hpp  ClientUDPMessage.hpp  Log.cpp  Log.hpp  NetMessageQueue.cpp  NetMessageQueue.hpp
distribute/: setup.nsi
docs/: .dir-locals.el  asset-file.rst  attack-rules.md  attack-rules.rst  conf.py  index.rst  menu.css  model-contrib.rst  model_contrib.md  model_contrib.rst  network-protocol.rst  network_protocol.md  network_protocol_contrib.md  object-guide.rst  object_guide.md  objects.org  server_admin_protocol.md  terrain_contrib.md  terrain_contrib.rst  texture_contrib.md  texture_contrib.rst
familyline-master/: .pre-commit-config.yaml  Doxyfile  LICENSE  assets.yml
materials/: testtex.mtl
models/: Tent.mtl  cabana.md2  tower.md2
scripts/: distbin.bat  distbinary  distsrc  get_commit.sh  install
server/: AdminCommandParser.cpp  AdminCommandParser.hpp  ChatLogger.cpp  ChatLogger.hpp  ChatManager.cpp  ChatManager.hpp  (+14 more)
src/client/: CMakeLists.txt  Game.cpp  HumanPlayer.cpp  HumanPlayer.hpp  Timer.cpp  Tribalia.cpp  config.h  config.h.in  config_reader.cpp  familyline.cpp  game.cpp  params.cpp  player_enumerator.cpp  preview_renderer.cpp
src/client/graphical/: BoundingBox.hpp  GraphicalPlotInterface.cpp  GraphicalPlotInterface.hpp  Light.cpp  LightManager.cpp  TerrainRenderer.cpp  TerrainRenderer.hpp  TerrainTexturizer.cpp  Texture.cpp  TextureFile.cpp  TextureOpener.cpp  asset_file.cpp  asset_file.hpp  asset_manager.cpp  asset_object.cpp  asset_object.hpp  camera.cpp  deform_animator.cpp  device.cpp  device.hpp  exceptions.cpp  exceptions.hpp  framebuffer.cpp  gfx_debug_drawer.cpp  gfx_service.cpp  gfx_service.hpp  gl_renderer.cpp  gl_renderer.hpp  logger.cpp  logger.hpp  material.cpp  material.hpp  material_manager.cpp  mesh.cpp  object_renderer.cpp  scene_manager.cpp  scene_renderer.cpp  shader.cpp  shader.hpp  shader_manager.cpp  (+7 more)
src/client/graphical/gui/: GUIButton.cpp  GUIControl.cpp  GUIImageControl.cpp  GUIImageControl.hpp  GUILabel.cpp  GUIManager.cpp  console_renderer.cpp  control.cpp  gui.cpp  gui_box.cpp  gui_button.cpp  gui_checkbox.cpp  gui_container_component.cpp  gui_control.cpp  gui_imageview.cpp  gui_label.cpp  gui_listbox.cpp  gui_manager.cpp  gui_script_runner.cpp  gui_textbox.cpp  gui_window.cpp  root_control.cpp  theme.cpp
src/client/graphical/materialopener/: MTLOpener.cpp  MTLOpener.hpp
src/client/graphical/meshopener/: MD2Opener.cpp  MD2Opener.hpp  MeshOpener.cpp  OBJOpener.cpp  anorms.h
src/client/graphical/opengl/: gl_device.cpp  gl_framebuffer.cpp  gl_gui_manager.cpp  gl_gui_renderer.cpp  gl_renderer.cpp  gl_shader.cpp  gl_terrain_renderer.cpp  gl_texture_environment.cpp  gl_window.cpp  gles_utils.cpp
src/client/input/: Cursor.cpp  InputEvent.hpp  InputListener.cpp  InputManager.cpp  InputManager.hpp  InputPicker.cpp  command_table.cpp  input_manager.cpp  input_processor.cpp  input_service.cpp
src/common/: CMakeLists.txt  Log.cpp  NetMessageQueue.cpp  generated.cmake  input_serialize.fbs  logger.cpp  network.fbs
src/common/logic/: ActionManager.cpp  BuildQueue.cpp  City.cpp  CityManager.cpp  CityManager.hpp  GameActionManager.cpp  GameActionManager.hpp  ObjectFactory.cpp  ObjectPathManager.cpp  PathFinder.cpp  PathFinder.hpp  Player.cpp  PlayerManager.cpp  Team.hpp  Terrain.cpp  TerrainException.cpp  TerrainFile.cpp  action_queue.cpp  attack_manager.cpp  attack_manager.hpp  colony.cpp  colony_manager.cpp  debug_drawer.cpp  game_event.cpp  game_object.cpp  input_recorder.cpp  input_reproducer.cpp  lifecycle_manager.cpp  logic_service.cpp  object_components.cpp  object_factory.cpp  object_listener.cpp  object_manager.cpp  object_path_manager.cpp  pathfinder.cpp  player.cpp  player_manager.cpp  replay_player.cpp  script_environment.cpp  terrain.cpp  (+1 more)
src/common/net/: NetPlayerFilter.cpp  NetPlayerManager.cpp  NetServer.cpp  game_packet_server.cpp  net_player_sender.cpp  network_client.cpp  network_player.cpp  server.cpp  server_finder.cpp
src/common/objects/: Tent.cpp  WatchTower.cpp
test/: CMakeLists.txt  TestObject.cpp  TestObject.hpp  TestPlayer.hpp  TestRenderer.cpp  TestRenderer.hpp  broken_input_file.frec  mock_gui_button.hpp  mock_gui_label.hpp  reproduce_test.frec  terrain_file.hpp  terrain_test.flte  terrain_test_brokencrc.flte  test-assets.yml  test_actionmanager.cpp  test_actionmanager.hpp  test_assetfile.cpp  test_assetfile.hpp  test_attack.cpp  test_city.cpp  test_colony_manager.cpp  test_command_table.cpp  test_game.cpp  test_gui_base.cpp  test_gui_button.cpp  test_gui_events.cpp  test_gui_label.cpp  test_gui_manager.cpp  test_gui_script.cpp  test_humanplayer.cpp  test_input_recorder.cpp  test_input_reproducer.cpp  test_lights.cpp  test_lights.hpp  test_mesh.cpp  test_model_opener.cpp  test_obj.cpp  test_obj.hpp  test_object_attack.cpp  test_object_factory.cpp  (+28 more)
test/assets/: test.md2
test/experiments/: Control.hpp  GUIManager.cpp  GUIManager.hpp  control.cpp  control.hpp  gui  gui.cpp  gui.hpp  gui_box.cpp  gui_box.hpp  gui_button.cpp  gui_button.hpp  gui_control.cpp  gui_control.hpp  gui_imageview.cpp  gui_imageview.hpp  gui_label.cpp  gui_label.hpp  gui_layout.hpp  gui_manager.cpp  gui_manager.hpp  gui_renderer.hpp  gui_textbox.cpp  gui_textbox.hpp  gui_window.cpp  gui_window.hpp  guitests.cpp  root_control.cpp  root_control.hpp  test_renderer.cpp  test_renderer.hpp
test/scripts/: gui-base.scm
test/utils/: test_device.cpp  test_device.hpp  test_event_receiver.hpp  test_gui_manager.hpp  test_gui_renderer.cpp  test_gui_renderer.hpp  test_inputprocessor.hpp  test_renderer.hpp  test_shader.hpp  test_texenv.cpp  test_window.hpp
(+687 files in other folders)
